[gd_scene load_steps=2 format=3 uid="uid://c8qk7m5n3pxr1"]

[ext_resource type="Script" path="res://location_mode.gd" id="1_location_mode"]

[node name="LocationMode" type="Panel"]
self_modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_location_mode")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LocationText" type="RichTextLabel" parent="VBoxContainer"]
custom_minimum_size = Vector2(600, 200)
layout_mode = 2
bbcode_enabled = true
fit_content = true

[node name="LocationList" type="VBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(600, 300)
layout_mode = 2

[node name="BackButton" type="Button" parent="VBoxContainer"]
visible = false
layout_mode = 2
text = "返回"
